--- a/part1.html
+++ b/part1.html
@@ -28,7 +28,7 @@
       }
     </style>
     <!--<script src="http://d3js.org/d3.v3.js"></script>-->
-    <script type="text/javascript" src="d3/d3.v3.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 </head>
 
 <body>
