--- a/part1.html
+++ b/part1.html
@@ -5,7 +5,7 @@
 <head>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 4: Visualization</title>
+    <title>Tweet Length Timemap</title>
     
      <style>
       rect.bordered {
@@ -37,7 +37,7 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="page-header center">
-                <h1>Part 1: <small>Tweet Length Timemap</small></h1>
+                <h1><small>Tweet Length Timemap</small></h1>
                 <div id="chart"></div>
                 <script type="text/javascript">
       var margin = { top: 50, right: 0, bottom: 100, left: 30 },
@@ -137,14 +137,10 @@
     <li>Longest 
       <ul>
     <li>Time:Fri 5pm, average length:62.5</li>
-    <li>Possible Reason: After a week's work, people are enjoying the night and expressing their feelings during the week.</li>
-    <li>Example: Guys I figured out the secret to Flappy Bird...delete it and never think about it ever again</li>
       </ul></li>
     <li>Shortest
       <ul>
     <li>Time:Sun 10am, average length:49.7</li>
-    <li>Possible reason: People are spending time with their families.</li>
-    <li>Example: Wake up #Drank go to bed #Drunk</li>
       </ul></li>
            </ul>
 			</p>
