--- a/part1.html
+++ b/part1.html
@@ -37,7 +37,7 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="page-header center">
-                <h1><small>Tweet Length Timemap</small></h1>
+                <h1>Tweet Length Timemap</h1>
                 <div id="chart"></div>
                 <script type="text/javascript">
       var margin = { top: 50, right: 0, bottom: 100, left: 30 },
