--- a/part2.html
+++ b/part2.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geomapping Tweet Sentiment</title>
+    <title>Assignment 4: Visualization</title>
     
     <style>
 
@@ -42,7 +42,7 @@ text.mono {
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="page-header center">
-                <h1>Geomapping Tweet Sentiment</h1>
+                <h1>Part 2: <small>Geomapping Tweet Sentiment</small></h1>
             </div>
             
             <h2> Sentiment Visualization</h2>
@@ -109,12 +109,14 @@ text.mono {
 		      </ul></li>
 			</p>
 			
+			<h2>Factors affacting sentiment</h2>
+			<p>
+			Some guesses: Unemployment, income, weather...
+			</p>
+			
 
         <div class="col-md-2"></div>
     </div>
-
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-	<script>
 
 </body>
 </html>
