--- a/part2.html
+++ b/part2.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 4: Visualization</title>
     
