--- a/part2.html
+++ b/part2.html
@@ -1,28 +1,23 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 4: Visualization</title>
     
     <style>
-
 text.mono {
         font-size: 9pt;
         font-family: Consolas, courier;
 }
-
 .counties {
   fill: none;
 }
-
 .states {
   fill: none;
   stroke: #fff;
   stroke-linejoin: round;
 }
-
 .q0-9 { fill:rgb(220,220,220); } //gray
 .q1-9 { fill:rgb(247,251,255); } 
 .q2-9 { fill:rgb(222,235,247); }
@@ -33,7 +28,6 @@ text.mono {
 .q7-9 { fill:rgb(33,113,181); }
 .q8-9 { fill:rgb(8,81,156); }
 .q9-9 { fill:rgb(8,48,107); }
-
 </style>
 </head>
 
@@ -48,14 +42,14 @@ text.mono {
             
             <h2> Sentiment Visualization</h2>
 <div id="gMap"> </div>
-
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script>
     var width = 960,
         height = 750;
-
     var rateById = d3.map();
-
     var rateByName=d3.map(); 
-
     var quantize= d3.scale.threshold()
     .domain([0.01, 0.4, 0.428, 0.457, 0.486, 0.514, 0.542, 0.571, 0.64])
     .range(d3.range(10).map(function(i) { return "q" + i + "-9"; }));
@@ -63,19 +57,15 @@ text.mono {
     var projection = d3.geo.albersUsa() //getsthe map
         .scale(1280)
         .translate([width / 2, height / 2]);
-
     var path = d3.geo.path()
         .projection(projection);
-
     var svg = d3.select("#gMap").append("svg")
         .attr("width", width)
         .attr("height", height);
-
     queue()
         .defer(d3.json, "us.json")
         .defer(d3.tsv, "county_sentiments.tsv", function(d) { rateById.set(d.id, +d.sent); rateByName.set(d.id, d.name);})
         .await(ready);
-
     function ready(error, us) {
       svg.append("g")
           .attr("class", "counties")
@@ -105,7 +95,7 @@ text.mono {
             <li>Most Positive
 		      <ul>
 		    <li>County: Dickinson, 19095 Average sentiment score: 0.82</li>
-		    <li>Reason: <a href="https://www.dickinsoncountynews.com/story/2180300.html"> Maybe that's the reason.</a></li>
+		    <li>Reason: <a href="http://www.dickinsoncountynews.com/story/2180300.html"> Maybe that's the reason.</a></li>
 		      </ul></li>
 			</p>
 			
@@ -118,5 +108,7 @@ text.mono {
         <div class="col-md-2"></div>
     </div>
 
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+	<script>
 </body>
 </html>
