--- a/part2.html
+++ b/part2.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 4: Visualization</title>
     
@@ -47,9 +47,9 @@ text.mono {
             
             <h2> Sentiment Visualization</h2>
 <div id="gMap"> </div>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://d3js.org/queue.v1.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/queue.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script>
 
     var width = 960,
@@ -108,7 +108,7 @@ text.mono {
             <li>Most Positive
 		      <ul>
 		    <li>County: Dickinson, 19095 Average sentiment score: 0.82</li>
-		    <li>Reason: <a href="http://www.dickinsoncountynews.com/story/2180300.html"> Maybe that's the reason.</a></li>
+		    <li>Reason: <a href="https://www.dickinsoncountynews.com/story/2180300.html"> Maybe that's the reason.</a></li>
 		      </ul></li>
 			</p>
 			
@@ -121,7 +121,7 @@ text.mono {
         <div class="col-md-2"></div>
     </div>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
 	<script>
 
 </body>
