--- a/part2.html
+++ b/part2.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 4: Visualization</title>
+    <title>Geomapping Tweet Sentiment</title>
     
     <style>
 
@@ -42,7 +42,7 @@ text.mono {
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div class="page-header center">
-                <h1>Part 2: <small>Geomapping Tweet Sentiment</small></h1>
+                <h1>Geomapping Tweet Sentiment</h1>
             </div>
             
             <h2> Sentiment Visualization</h2>
@@ -110,11 +110,6 @@ text.mono {
 		    <li>County: Dickinson, 19095 Average sentiment score: 0.82</li>
 		    <li>Reason: <a href="https://www.dickinsoncountynews.com/story/2180300.html"> Maybe that's the reason.</a></li>
 		      </ul></li>
-			</p>
-			
-			<h2>Factors affacting sentiment</h2>
-			<p>
-			Some guesses: Unemployment, income, weather...
 			</p>
 			
 
