--- a/handout.html
+++ b/handout.html
@@ -1,34 +1,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3: Twitter Sentiment Classification</title>
+    <title>Twitter Sentiment Analysis</title>
 </head>
 
 <body>
-
-<div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="page-header center">
-                <h1>Assignment 3 <small>Twitter Sentiment Classification</small></h1>
-            </div>
-
-			<h2>Brief</h2>
-			<p>
-				<ul>
-					<li>Due date: 11:59PM 03/18/2014</li>
-					<li>Stencil: /course/cs1951a/pub/assignment3/stencil.tgz</li>
-					<li>Data: /course/cs1951a/pub/assignment3/data/</li>
-					<li>Handin: cs1951a_handin assignment3</li>
-					<li>Required files: README, code/, html/, html/index.html</li>
-				</ul> 
-			</p>
-
-
-			<hr>
-
 
 			<h2>Overview</h2>
 			<p>
