--- a/handout.html
+++ b/handout.html
@@ -1,16 +1,29 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter Sentiment Analysis</title>
 </head>
 
 <body>
 
-			<h2>Overview</h2>
+<div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="page-header center">
+                <h1>Twitter Sentiment Analysis</h1>
+            </div>
+
+		
+				<h2>Overview</h2>
 			<p>
-				In this assignment, you will be performing <a href="http://en.wikipedia.org/wiki/Sentiment_analysis">sentiment analysis</a> on tweets using different machine learning techniques. You will learn how to extract features from data and build <a href="http://en.wikipedia.org/wiki/Supervised_learning">supervised learning</a> models to automatically classify tweets as either positive or negative (sentiment). Classifiers we will be examining are <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Naive Bayes</a>, <a href="http://en.wikipedia.org/wiki/Logistic_regression">Logistic Regression</a>, and <a href="http://en.wikipedia.org/wiki/Support_vector_machine">Support Vector Machine</a>.
+				<ul>
+					<li>Use the <a href="http://d3js.org/">D3</a> Visualization library to display data about Twitter tweets.</li>
+					<li>Extract features from data by bag-of-words model</li>
+				 	<li>Performed <a href="http://en.wikipedia.org/wiki/Sentiment_analysis">sentiment analysis</a> on tweets using <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Naive Bayes</a>, <a href="http://en.wikipedia.org/wiki/Logistic_regression">Logistic Regression</a>, and <a href="http://en.wikipedia.org/wiki/Support_vector_machine">Support Vector Machine</a>. </li>
+				Extract features from data and build <a href="http://en.wikipedia.org/wiki/Supervised_learning">supervised learning</a> models to automatically classify tweets as either positive or negative (sentiment). Classifiers we will be examining are <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Naive Bayes</a>, <a href="http://en.wikipedia.org/wiki/Logistic_regression">Logistic Regression</a>, and <a href="http://en.wikipedia.org/wiki/Support_vector_machine">Support Vector Machine</a>. 
+				</ul>
 			</p>
 
 
