--- a/handout.html
+++ b/handout.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter Sentiment Analysis</title>
 </head>
@@ -22,7 +22,6 @@
 					<li>Use the <a href="http://d3js.org/">D3</a> Visualization library to display data about Twitter tweets.</li>
 					<li>Extract features from data by bag-of-words model</li>
 				 	<li>Performed <a href="http://en.wikipedia.org/wiki/Sentiment_analysis">sentiment analysis</a> on tweets using <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Naive Bayes</a>, <a href="http://en.wikipedia.org/wiki/Logistic_regression">Logistic Regression</a>, and <a href="http://en.wikipedia.org/wiki/Support_vector_machine">Support Vector Machine</a>. </li>
-				Extract features from data and build <a href="http://en.wikipedia.org/wiki/Supervised_learning">supervised learning</a> models to automatically classify tweets as either positive or negative (sentiment). Classifiers we will be examining are <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Naive Bayes</a>, <a href="http://en.wikipedia.org/wiki/Logistic_regression">Logistic Regression</a>, and <a href="http://en.wikipedia.org/wiki/Support_vector_machine">Support Vector Machine</a>. 
 				</ul>
 			</p>
 
