--- a/handout.html
+++ b/handout.html
@@ -91,6 +91,13 @@ where each entry of the vectors refers to the existence of the corresponding ent
 			<p>
 				<a href="https://rawgit.com/XiaojunMENG/Twitter/master/part2.html">Geomapping Tweet Sentiment</a>
 			</p>
+			
+<hr>
+<h2>Others</h2>
+			<p>
+				<a href="https://rawgit.com/XiaojunMENG/finalproject/master/animations.html">Another Example of D3</a>
+				<a href="https://github.com/XiaojunMENG/Twitter/master/part1.html">How D3 code look like</a>
+			</p>
 
 			
         <div class="col-md-2"></div>
